[package]
name = "benchmark_dusra"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = { version = "2.0.9" }
solana-rpc-client-api = { version = "2.0.9" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
simplelog = "0.12.2"
solana-sdk = "2.0.9"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
chrono = "0.4"
solana-transaction-status = "2.0.9"
reqwest = "0.11.27"
csv = "1.1"
spl-governance = "4.0.0"
rand = "0.7.3"
futures = "0.3.30"